Redesign of the internal HTTP benchmark loosely based on AB